--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,3 +2,9 @@
     width: 210px;
     height: 68px ;
 }
+.logo-footer {
+    width: 122px;
+    height: 39px ;
+    padding-top: 66px;
+    // fill: white; // comment changer la couleur du logo SVG ?
+}
