--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,6 @@
 @import "./components/banner"; 
 @import "./components/locations"; 
 @import "./components/error"; 
+@import "./components/footer"; 
+@import "./components/collapse"; 
+
