--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -34,9 +34,25 @@ $color-footer: #000000;
 }
 
 body {
-    font-family: $font-medium;
+font-family: $font-medium;
 }
 
 li {
     list-style-type: none;
 }
+
+// Sticky footer bottom : 
+// html {
+//   height: 100%;
+// }
+
+// body {
+//     min-height: 100%;
+//     display: grid;
+//     grid-template-rows: 1fr auto;
+// }
+
+// .footer {
+//   grid-row-start: 2;
+//   grid-row-end: 3;
+// }
