--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,10 +1,12 @@
 .logo {
     width: 210px;
-    height: 68px ;
+    //height: 68px ;
+    
+
 }
 .logo-footer {
     width: 122px;
-    height: 39px ;
+    //height: 39px ; 
     padding-top: 66px;
     // fill: white; // comment changer la couleur du logo SVG ?
 }
