--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,4 +6,5 @@
 @import "./components/error"; 
 @import "./components/footer"; 
 @import "./components/collapse"; 
+@import "./components/location"; 
 
