Location.js données dynamiques

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -1,11 +1,10 @@
-.collapse {
-
-    // color: white;
-    
+// About.js
+.about-collapse {
     margin: 31px 208px 43px 208px;
+}
 
-
-    .collapse-header {
+.collapse-header {
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -21,10 +20,11 @@
             margin-left: 18px;
         }
 
-        .button {
+        .collapse-button-arrow {
             margin-right: 17px;
+            cursor: pointer;
             
-            #button-arrow {
+            #collapse-button-arrow {
                 color: white;
             }
         }
@@ -33,11 +33,20 @@
     .collapse-text p {
         color: $color-1;
         background-color: $color-2;
-        //background-color: black;
         z-index: 1;
         padding: 36px 27px 19px 18px;
         margin-top: -10px;
         border-radius: 0 0 5px 5px;
     }
-}
 
+    // Location.js
+.location-collapses-2-columns {
+    display: flex;
+    justify-content: space-between;
+    margin: 24px 100px 0 100px;
+
+    .location-collapse {
+        justify-content: space-between;
+        width: 48%;
+    }
+}
