--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,4 +7,5 @@
 @import "./components/footer"; 
 @import "./components/collapse"; 
 @import "./components/location"; 
+@import "./components/slideshow"; 
 
