--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -7,7 +7,6 @@
         object-fit: cover;
         width: 100%;
         border-radius: 25px;
-        background-color: yellow;
     }
 }
 
@@ -29,13 +28,20 @@
     }
 
     .location-summary-left-tags {
-        @include flexCenter; 
-        height: 25px;
-        width: 115px;
-        color: white;
-        font-size: 14px;
-        background-color: $color-1;
-        border-radius: 10px;
+        display: flex;
+        margin-top: 20px;
+
+        .location-summary-left-tag {
+            @include flexCenter; 
+            height: 25px;
+            min-width: 115px;
+            margin-right: 10px;
+            padding: 0 10px;
+            color: white;
+            font-size: 14px;
+            background-color: $color-1;
+            border-radius: 10px;
+        }
     }
 
     .location-summary-right-host {
@@ -50,6 +56,7 @@
 
     .location-summary-right-rating {
         @include flexCenter;
+        margin-top: 24px;
     }
 
     .location-summary-right-host-picture img {
@@ -57,17 +64,6 @@
         object-fit: cover;
         width: 64px;
         margin-left: 5px;
-    }
-}
-
-.location-collapses-2-columns {
-    display: flex;
-    margin: 26px 100px 0 100px;
-
-    .location-collapse {
-        background-color: pink;
-        width: 100%;
-        justify-content: space-between;
     }
 }
 
