--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -1,6 +1,16 @@
 // About.js
 .about-collapse {
     margin: 31px 208px 43px 208px;
+
+    @media screen and (max-width: 1000px) {
+        margin: 20px 60px 0 60px;
+    }
+    @media screen and (max-width: 700px) {
+        margin: 20px 40px 0 40px;
+    }
+    @media screen and (max-width: 400px) {
+        margin: 20px 20px 0 20px;
+    }
 }
 
 .collapse-header {
@@ -18,6 +28,16 @@
             font-weight: 500;
             font-size: 24px;
             margin-left: 18px;
+
+            @media screen and (max-width: 800px) {
+                font-size: 20px;
+            }
+            @media screen and (max-width: 700px) {
+                font-size: 16px;
+            }
+            @media screen and (max-width: 400px) {
+                font-size: 13px;
+            }
         }
 
         .collapse-button-arrow {
@@ -34,13 +54,24 @@
         }
     }
 
-    .collapse-text p {
+    .collapse-text-is-opened {
         color: $color-1;
         background-color: $color-2;
         z-index: 1;
         padding: 36px 27px 19px 18px;
         margin-top: -10px;
         border-radius: 0 0 5px 5px;
+
+        @media screen and (max-width: 800px) {
+            font-size: 16px;
+        }
+        @media screen and (max-width: 700px) {
+            font-size: 14px;
+        }
+        @media screen and (max-width: 400px) {
+            font-size: 12px;
+            padding: 36px 7px 19px 11px;
+        }
     }
 
     // Location.js
