--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,6 +4,17 @@
     justify-content: space-between;
     margin: 54px 100px 63px 100px;
 
+    @media screen and (max-width: 1000px) {
+        margin: 20px 60px 0 60px;
+    }
+    @media screen and (max-width: 700px) {
+        margin: 20px 40px 0 40px;
+    }
+    @media screen and (max-width: 400px) {
+        margin: 20px 20px 0 20px;
+    }
+    
+
     .navigation {
         ul {
             display: flex;
@@ -11,6 +22,24 @@
                 text-decoration: none;
                 li {
                     margin-left: 57px;
+
+                    @media screen and (max-width: 1000px) {
+                        font-size: 16px;
+                        margin-left: 25px;
+                        text-transform:uppercase;
+                    }
+                    @media screen and (max-width: 700px) {
+                        font-size: 12px;
+                        margin-left: 12px;
+                    }
+                    @media screen and (max-width: 400px) {
+                        font-size: 12px;
+                        margin-left: 10px;
+                    }
+                    @media screen and (max-width: 350px) {
+                        font-size: 11px;
+                        margin-left: 5px;
+                    }
                 }
              }
         }
