--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -3,6 +3,16 @@
     display: flex;
     justify-content: space-between;
 
+    @media screen and (max-width: 1000px) {
+            
+    }
+    @media screen and (max-width: 700px) {
+        
+    }
+    @media screen and (max-width: 400px) {
+       
+    }
+
     .location-summary-left-title {
         font-size: 36px;
         font-weight: 500;
