--- a/src/styles/components/_locations.scss
+++ b/src/styles/components/_locations.scss
@@ -1,6 +1,4 @@
 .location-cards {
-    //display: flex;
-    //flex-wrap: wrap;    
     margin: 43px 100px 0 100px;
     padding: 56px 50px;
     display: grid;
@@ -9,17 +7,48 @@
     background-color: $color-2;
     border-radius: 25px;
 
+    @media screen and (min-width: 2000px) {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); 
+    }
+    @media screen and (max-width: 1500px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+    }
+    @media screen and (max-width: 1050px) {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); 
+        margin: 20px 60px 0 60px;        
+        padding: 0;
+    }
+    @media screen and (max-width: 700px) {
+        margin: 20px 40px 0 40px;
+        background-color: white;
+    }
+    // @media screen and (max-width: 450px) {
+    //     margin: 20px 20px 0 20px;
+    // }
+    @media screen and (max-width: 400px) {
+        margin: 20px 20px 0 20px;
+    }
     
-
     .location-card {
         position: relative;
-        //background: url(../../assets/img/location_cards_background.jpg) center/cover;
-        //box-shadow: 0px -10px 50px 0px black inset;
-        //background-color: $color-1;        
         border-radius: 25px;
         height: 340px;
         width: 340px;
         margin: 0 auto;
+
+        @media screen and (max-width: 450px) {
+            // width: 335px;
+            width: 100%;
+            height: 255px;        
+        }
+        @media screen and (max-width: 380px) {
+            width: 100%;
+            // width: 300px;
+            height: 228px;        
+        }
         
         .location-card-title {
             position: absolute;
@@ -36,29 +65,24 @@
             height: 340px;
             width: 340px;
             border-radius: 25px;
+
+            @media screen and (max-width: 1000px) {
+                border-radius: 10px;
+            }
+            @media screen and (max-width: 700px) {
+             
+            }
+            @media screen and (max-width: 450px) {
+                width: 100%;
+                // width: 335px;
+                height: 255px;
+                // height: 255px;
+            }
+            @media screen and (max-width: 380px) {
+                // height: 200px;
+                width: 100%;
+                height: 228px;        
+            }
         }
-
     }
-
-}
-
-@media screen and (min-width: 2000px) {
-    .location-cards {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr); 
-    } 
-}
-
-@media screen and (max-width: 1500px) {
-    .location-cards {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); 
-    } 
-}
-
-@media screen and (max-width: 1000px) {
-    .location-cards {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr); 
-    } 
 }
