--- a/src/styles/components/_slideshow.scss
+++ b/src/styles/components/_slideshow.scss
@@ -2,11 +2,32 @@
     margin: -43px 100px 0 100px;
     position: relative;
 
+    @media screen and (max-width: 1000px) {
+        margin: 30px 60px 0 60px;
+    }
+    @media screen and (max-width: 700px) {
+        margin: 30px 40px 0 40px;
+    }
+    @media screen and (max-width: 400px) {
+        margin: 30px 20px 0 20px;
+    }
+
     img {
         height: 415px;
         object-fit: cover;
         width: 100%;
         border-radius: 25px;
+
+        @media screen and (max-width: 1000px) {
+            
+        }
+        @media screen and (max-width: 700px) {
+            
+        }
+        @media screen and (max-width: 400px) {
+            width: 100%;
+            height: 255px;
+        }
     }
 }
 
