--- a/src/styles/components/_slideshow.scss
+++ b/src/styles/components/_slideshow.scss
@@ -29,18 +29,90 @@
             height: 255px;
         }
     }
+
+    .slideshow-right-button-arrow {
+        position: absolute;
+        top: 149px;
+        right: 23px;
+        cursor: pointer;
+
+        @media screen and (max-width: 1000px) {
+        }
+        @media screen and (max-width: 700px) {
+            top: 180px;
+            right: 12px;
+        }
+        @media screen and (max-width: 400px) {
+            top: 110px;
+            right: 6px;
+        }
+
+        svg {
+            @media screen and (max-width: 1000px) {
+            }
+            @media screen and (max-width: 700px) {
+                height: 40px;
+            }
+            @media screen and (max-width: 400px) {
+                height: 20px;
+            }
+        }
+    }
+
+    .slideshow-left-button-arrow {
+        position: absolute;
+        top: 149px;
+        left: 23px;
+        cursor: pointer;
+        transform: rotate(180deg);
+
+        @media screen and (max-width: 1000px) {
+        }
+        @media screen and (max-width: 700px) {
+            top: 180px;
+            left: 12px;
+        }
+        @media screen and (max-width: 400px) {
+            top: 110px;
+            left: 6px;
+        }
+
+        svg {
+            @media screen and (max-width: 1000px) {
+            }
+            @media screen and (max-width: 700px) {
+                height: 40px;
+            }
+            @media screen and (max-width: 400px) {
+                height: 20px;
+            }
+        }
+    }
+    
+    // Clear arrows on mobile
+    .slideshow-right-button-arrow-display-none {
+        display: none;
+    }
+    .slideshow-left-button-arrow-display-none {
+        display: none;
+    }
+
+    .slideshow-counter {
+        position: absolute;
+        color: white;
+        font-size: 18px;
+        top: 357px;
+        width: 100%;
+        text-align: center;
+
+        @media screen and (max-width: 1000px) {
+        }
+        @media screen and (max-width: 700px) {
+            display: none;
+        }
+        @media screen and (max-width: 400px) {
+            display: none;
+        }
+    }
 }
 
-.slideshow-left-button-arrow {
-    position: absolute;
-    top: 149px;
-    right: 23px;
-    cursor: pointer;
-}
-.slideshow-right-button-arrow {
-    position: absolute;
-    top: 149px;
-    left: 23px;
-    cursor: pointer;
-    transform: rotate(180deg);
-}
