--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -24,6 +24,14 @@
         border-radius: 5px;
         cursor: pointer;
 
+        @media screen and (max-width: 1000px) {
+        }
+        @media screen and (max-width: 700px) {
+
+        }
+        @media screen and (max-width: 400px) {
+            height: 30px;
+        }
 
         h3 {
             color: white;
@@ -44,6 +52,28 @@
 
         .collapse-button-arrow {
             margin-right: 17px;
+
+            @media screen and (max-width: 1000px) {
+                    
+            }
+            @media screen and (max-width: 700px) {
+             
+            }
+            @media screen and (max-width: 400px) {
+                margin-right: 7px;
+            }
+
+            div svg {
+                @media screen and (max-width: 1000px) {
+                    
+                }
+                @media screen and (max-width: 700px) {
+                 
+                }
+                @media screen and (max-width: 400px) {
+                 width: 15px;
+                }
+            }
         
             .collapse-button-arrow-svg {
                 transform: rotate(0deg);
@@ -81,8 +111,28 @@
     justify-content: space-between;
     margin: 24px 100px 0 100px;
 
+    @media screen and (max-width: 1000px) {
+        flex-direction: column;
+        margin: 15px 60px 0 60px;
+    }
+    @media screen and (max-width: 700px) {
+        margin: 5px 40px 0 40px;
+    }
+    @media screen and (max-width: 400px) {
+        margin: -9px 20px 0 20px;
+    }
+
     .location-collapse {
         justify-content: space-between;
         width: 48%;
+        
+        @media screen and (max-width: 1000px) {
+            width: 100%;
+            margin-top: 25px;
+        }
+        @media screen and (max-width: 700px) {
+        }
+        @media screen and (max-width: 400px) {
+        }
     }
 }
