--- a/src/styles/components/_slideshow.scss
+++ b/src/styles/components/_slideshow.scss
@@ -19,10 +19,9 @@
         border-radius: 25px;
 
         @media screen and (max-width: 1000px) {
-            
         }
-        @media screen and (max-width: 700px) {
-            
+        @media screen and (max-width: 700px) {     
+            border-radius: 10px;
         }
         @media screen and (max-width: 400px) {
             width: 100%;
