--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,5 @@
 body {
-    // bottom stick to bottom
+    // Footer, stick to bottom of body:
     min-height: 100vh;
     position: relative;
     padding-bottom: 250px;
@@ -12,8 +12,7 @@ body {
     background-color: black;
     height: 209px;
     margin-top: 30px;
-    
-    // bottom stick to bottom
+    // Footer, stick to bottom of body:
     position: absolute;
     bottom: 0;
     width: 100%;
