--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -20,7 +20,6 @@
         // height: 51px;
         
         @media screen and (max-width: 1000px) {
-            // height: 46px;
             font-size: 30px;
         }
         @media screen and (max-width: 700px) {
@@ -91,9 +90,16 @@
 
     .location-summary-right {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column;
         justify-content: space-between;
 
+        @media screen and (max-width: 1000px) {
+            flex-direction: row-reverse;
+        }
+        @media screen and (max-width: 700px) {
+        }
+        @media screen and (max-width: 400px) {
+        }
 
         .location-summary-right-host {
             display: flex;
