--- a/src/styles/components/_location.scss
+++ b/src/styles/components/_location.scss
@@ -144,7 +144,7 @@
             @media screen and (max-width: 400px) {
             }
     
-            svg {
+            .location-summary-right-stars-img {
                 margin-left: 10px;
     
                 @media screen and (max-width: 1000px) {
