--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -45,6 +45,7 @@
         z-index: 0;
         width: 100%;
         height: 223px;
+        filter: brightness(65%); 
 
         @media screen and (max-width: 1000px) {
             border-radius: 15px;
